Add Intent chooser. Add proper message when there is no RSS Feed.

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -4,5 +4,6 @@
     <string name="app_name">JSON List</string>
     <string name="hello_world">Hello world!</string>
     <string name="action_settings">Settings</string>
-
+    <string name="chooser_title">Choose the App</string>
+    
 </resources>
